@@ -2,7 +2,7 @@
  * JFreeChart : a free chart library for the Java(tm) platform
  * ===========================================================
  *
- * (C) Copyright 2000-2005, by Object Refinery Limited and Contributors.
+ * (C) Copyright 2000-2007, by Object Refinery Limited and Contributors.
  *
  * Project Info:  http://www.jfree.org/jfreechart/index.html
  *
@@ -27,14 +27,15 @@
  * --------------------------
  * SeriesRenderingOrder.java
  * --------------------------
- * (C) Copyright 2005, by Object Refinery Limited.
+ * (C) Copyright 2005, 2007, by Object Refinery Limited.
  *
  * Original Author:  Eric Thomas (www.isti.com);
- * Contributor(s):   -;
+ * Contributor(s):   David Gilbert (for Object Refinery Limited);
  *
  * Changes:
  * --------
  * 21-Apr-2005 : Version 1 contributed by Eric Thomas (ET);
+ * 21-Nov-2007 : Implemented hashCode() (DG);
  *
  */
 
@@ -57,14 +58,14 @@ public final class SeriesRenderingOrder implements Serializable {
      * of series.
      */
     public static final SeriesRenderingOrder FORWARD
-        = new SeriesRenderingOrder("SeriesRenderingOrder.FORWARD");
+            = new SeriesRenderingOrder("SeriesRenderingOrder.FORWARD");
 
     /**
      * Render series in the order N-1, N-2, ..., 2, 1, 0, where N is the
      * number of series.
      */
     public static final SeriesRenderingOrder REVERSE
-        = new SeriesRenderingOrder("SeriesRenderingOrder.REVERSE");
+            = new SeriesRenderingOrder("SeriesRenderingOrder.REVERSE");
 
     /** The name. */
     private String name;
@@ -91,28 +92,33 @@ public final class SeriesRenderingOrder implements Serializable {
      * Returns <code>true</code> if this object is equal to the specified
      * object, and <code>false</code> otherwise.
      *
-     * @param obj  the other object.
+     * @param obj  the object (<code>null</code> permitted).
      *
      * @return A boolean.
      */
     public boolean equals(Object obj) {
-
         if (this == obj) {
             return true;
         }
         if (!(obj instanceof SeriesRenderingOrder)) {
             return false;
         }
-
         SeriesRenderingOrder order = (SeriesRenderingOrder) obj;
         if (!this.name.equals(order.toString())) {
             return false;
         }
-
         return true;
-
     }
 
+    /**
+     * Returns a hash code for this instance.
+     * 
+     * @return A hash code.
+     */
+    public int hashCode() {
+        return this.name.hashCode();
+    }
+    
     /**
      * Ensures that serialization returns the unique instances.
      *
